Update Encapsulation.md